Change index.css to only import themes being used
Instead of importing all 35 themes from DaisyUI, only the themes being used are now the only ones being imported

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 }
 
 @plugin "daisyui" {
-  themes: all;
+  themes: dark, light, cupcake, bumblebee, synthwave, retro, cyberpunk, forest,
+    aqua, pastel, dracula, winter, nord;
 }
 
 body {
