Fix default theme having no value
When switching back to the default theme (dark), the dark theme wasn't loading since it had no value, a value has been added and I have set the dark theme as default

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@
 }
 
 @plugin "daisyui" {
-  themes: dark, light, cupcake, bumblebee, synthwave, retro, cyberpunk, forest,
-    aqua, pastel, dracula, winter, nord;
+  themes: dark --default, light, cupcake, bumblebee, synthwave, retro, cyberpunk,
+    forest, aqua, pastel, dracula, winter, nord;
 }
 
 body {
